--- a/Step3_1dCNN.ipynb
+++ b/Step3_1dCNN.ipynb
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Build BiLSTM\n",
+    "# 3. Build 1dCNN\n",
     "## 3.1. Initialize the Model and Add the Layers"
    ]
   },
@@ -450,7 +450,7 @@
     "    json_file = open(load_path+\".json\",'r')\n",
     "    model_json = json_file.read()\n",
     "    json_file.close()\n",
-    "    model = keras.models.model_from_json(model_json,custom_objects=SeqSelfAttention.get_custom_objects())\n",
+    "    model = keras.models.model_from_json(model_json)\n",
     "    # load weights and assign them to the model\n",
     "    model.load_weights(load_path+\".h5\")\n",
     "    print(\"loaded {a} model successfully\".format(a=modelname))\n",
