--- a/Step3_XGBoost.ipynb
+++ b/Step3_XGBoost.ipynb
@@ -218,12 +218,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7.Evaluation"
+    "# 4.Evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +232,7 @@
     "from sklearn.metrics import precision_score\n",
     "from sklearn.metrics import recall_score\n",
     "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "def getEvaluation(y_test,y_pred):\n",
     "    ev = dict()\n",
@@ -240,6 +241,7 @@
     "    ev[\"precision\"]=precision_score(y_test,y_pred,average=\"binary\")\n",
     "    ev[\"recall\"]=recall_score(y_test,y_pred,average=\"binary\")\n",
     "    ev[\"F1 score\"]=f1_score(y_test,y_pred,average=\"binary\")\n",
+    "    ev['Accuracy']=accuracy_score(y_test,y_pred)\n",
     "    \n",
     "    for key in ev.keys():\n",
     "        if key !=\"confusion_matrix\":\n",
