--- a/Step3_BiLSTM.ipynb
+++ b/Step3_BiLSTM.ipynb
@@ -427,7 +427,7 @@
     "    json_file = open(load_path+\".json\",'r')\n",
     "    model_json = json_file.read()\n",
     "    json_file.close()\n",
-    "    model = keras.models.model_from_json(model_json,custom_objects=SeqSelfAttention.get_custom_objects())\n",
+    "    model = keras.models.model_from_json(model_json)\n",
     "    # load weights and assign them to the model\n",
     "    model.load_weights(load_path+\".h5\")\n",
     "    print(\"loaded {a} model successfully\".format(a=modelname))\n",
